Home Work 8 Update Fix gap

--- a/css/main.css
+++ b/css/main.css
@@ -488,13 +488,12 @@ li {
   text-align: center;
 }
 
-@media screen and (min-width: 767px) {
-  .cards-team {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-  }
+.cards-team {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
+
 @media screen and (min-width: 768px) {
   .cards-team {
     flex-basis: calc((100% - 30px) / 2);
@@ -1150,12 +1149,13 @@ li {
     max-width: 354px;
     height: 100%;
   }
-  .portfolio-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-  }
 }
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
 @media screen and (max-width: 767px) {
   .mobile-menu {
     position: fixed;
